--- a/frontend/home_packages/booking.html
+++ b/frontend/home_packages/booking.html
@@ -364,7 +364,7 @@
                 <p class="mb-0">Begin your journey to the perfect wedding day</p>
             </div>
             <div class="booking-body">
-                <form id="weddingBookingForm" action="/submit-wedding-booking" method="POST">
+                <form id="weddingBookingForm">
                     <!-- Couple's Information -->
                     <div class="wedding-details">
                         <h5 class="form-section-title"><i class="fas fa-user-friends me-2"></i> Couple's Information</h5>
