--- a/frontend/home_packages/suply.html
+++ b/frontend/home_packages/suply.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+"<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -733,7 +733,7 @@
                         <p class="animated delay-1">Complete this form to join our network of premium wedding suppliers</p>
                     </div>
                     
-                    <form class="needs-validation" novalidate>
+                    <form action="/submit" method="POST" class="needs-validation" novalidate>
                         <div class="row">
                             <div class="col-md-6 mb-4 animated delay-2">
                                 <label for="firstName" class="form-label">
@@ -1253,6 +1253,7 @@
                 });
             });
         });
-    </script>
+       
+        </script>
 </body>
 </html>
