--- a/frontend/home_packages/suply.html
+++ b/frontend/home_packages/suply.html
@@ -739,7 +739,7 @@
                                 <label for="firstName" class="form-label">
                                     <i class="fas fa-user service-icon"></i>First Name
                                 </label>
-                                <input type="text" class="form-control" id="firstName" placeholder="Your first name" required>
+                                <input type="text" class="form-control" id="firstname"  name="firstname" placeholder="Your first name" required>
                                 <div class="invalid-feedback">
                                     Please provide your first name.
                                 </div>
@@ -748,7 +748,7 @@
                                 <label for="lastName" class="form-label">
                                     <i class="fas fa-user service-icon"></i>Last Name
                                 </label>
-                                <input type="text" class="form-control" id="lastName" placeholder="Your last name" required>
+                                <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Your last name" required>
                                 <div class="invalid-feedback">
                                     Please provide your last name.
                                 </div>
@@ -760,7 +760,7 @@
                                 <label for="contactEmail" class="form-label">
                                     <i class="fas fa-envelope service-icon"></i>Email Address
                                 </label>
-                                <input type="email" class="form-control" id="contactEmail" placeholder="your@email.com" required>
+                                <input type="email" class="form-control" id="contactEmail" name="email" placeholder="your@email.com" required>
                                 <div class="invalid-feedback">
                                     Please provide a valid email address.
                                 </div>
@@ -771,7 +771,7 @@
                                 </label>
                                 <div class="input-group">
                                     <span class="input-group-text">+250</span>
-                                    <input type="tel" class="form-control" id="contactNumber" placeholder="78 123 4567" required>
+                                    <input type="tel" class="form-control" id="contactNumber" name="phone" placeholder="78 123 4567" required>
                                 </div>
                                 <div class="invalid-feedback">
                                     Please provide a valid phone number.
@@ -783,14 +783,14 @@
                             <label for="companyName" class="form-label">
                                 <i class="fas fa-building service-icon"></i>Business Name (if applicable)
                             </label>
-                            <input type="text" class="form-control" id="companyName" placeholder="Your business name">
+                            <input type="text" class="form-control" id="companyName" name="business" placeholder="Your business name">
                         </div>
                         
                         <div class="mb-4 animated delay-4">
                             <label for="companyAddress" class="form-label">
                                 <i class="fas fa-map-marker-alt service-icon"></i>Business Location
                             </label>
-                            <input type="text" class="form-control" id="companyAddress" placeholder="Where you operate from" required>
+                            <input type="text" class="form-control" id="companyAddress" name="location"  placeholder="Where you operate from" required>
                             <div class="invalid-feedback">
                                 Please provide your business location.
                             </div>
@@ -801,24 +801,25 @@
                                 <i class="fas fa-tags service-icon"></i>Service Category
                             </label>
                             <div class="select-wrapper">
-                                <select class="form-select" id="serviceCategory" required>
+                                <select class="form-select" id="serviceCategory" name="service" required>
                                     <option value="" disabled selected>Select your primary service category</option>
-                                    <option value="1">Catering</option>
-                                    <option value="2">Videography & Photography</option>
-                                    <option value="3">Venue</option>
-                                    <option value="4">Florists</option>
-                                    <option value="5">Troupe</option>
-                                    <option value="6">Decor</option>
-                                    <option value="7">Transportation (Cars)</option>
-                                    <option value="8">Invitation Cards</option>
-                                    <option value="9">Beauty & Makeup</option>
-                                    <option value="10">Bridal Style & Attire</option>
-                                    <option value="11">Master of Ceremonies (MC)</option>
-                                    <option value="12">Sound & Lighting</option>
-                                    <option value="13">Gakondo</option>
-                                    <option value="13">Amahamba</option>
-                                    <option value="14">Other Wedding Services</option>
-                                </select>
+                                    <option value="Catering">Catering</option>
+                                    <option value="Videography & Photography">Videography & Photography</option>
+                                    <option value="Venue">Venue</option>
+                                    <option value="Florists">Florists</option>
+                                    <option value="Troupe">Troupe</option>
+                                    <option value="Decor">Decor</option>
+                                    <option value="Transportation (Cars)">Transportation (Cars)</option>
+                                    <option value="Invitation Cards">Invitation Cards</option>
+                                    <option value="Beauty & Makeup">Beauty & Makeup</option>
+                                    <option value="Bridal Style & Attire">Bridal Style & Attire</option>
+                                    <option value="Master of Ceremonies (MC)">Master of Ceremonies (MC)</option>
+                                    <option value="Sound & Lighting">Sound & Lighting</option>
+                                    <option value="Gakondo">Gakondo</option>
+                                    <option value="Amahamba">Amahamba</option>
+                                    <option value="Other Wedding Services">Other Wedding Services</option>
+                                  </select>
+                                  
                             </div>
                             <div class="invalid-feedback">
                                 Please select your service category.
@@ -829,7 +830,7 @@
                             <label for="experience" class="form-label">
                                 <i class="fas fa-briefcase service-icon"></i>Years of Experience
                             </label>
-                            <input type="number" class="form-control" id="experience" placeholder="How many years in business?" min="0" required>
+                            <input type="number" class="form-control" id="experience" name="experience" placeholder="How many years in business?" min="0" required>
                             <div class="invalid-feedback">
                                 Please provide your years of experience.
                             </div>
@@ -841,7 +842,7 @@
                             </label>
                             <div class="input-group">
                                 <span class="input-group-text"><i class="fas fa-globe"></i></span>
-                                <input type="url" class="form-control" id="portfolioLink" placeholder="https://yourportfolio.com">
+                                <input type="url" class="form-control" id="portfolioLink" name="link"  placeholder="https://yourportfolio.com">
                             </div>
                             <small class="text-muted">Website, Instagram, Facebook, or other portfolio link</small>
                         </div>
@@ -850,7 +851,7 @@
                             <label for="description" class="form-label">
                                 <i class="fas fa-edit service-icon"></i>Tell Us About Your Services
                             </label>
-                            <textarea class="form-control" id="description" rows="5" placeholder="Describe your services, specialties, and what makes you unique..." required></textarea>
+                            <textarea class="form-control" id="description" name="description" rows="5" placeholder="Describe your services, specialties, and what makes you unique..." required></textarea>
                             <div class="invalid-feedback">
                                 Please tell us about your services.
                             </div>
